# Tiva-C-Projects

./: .gitignore  CMakeLists.txt  README.md
CAN/: .cproject  can.c  can.h  main.c
CAN/Debug/: CAN_linkInfo.xml  canoe_linkInfo.xml  ccsObjs.opt  makefile  subdir_rules.mk  subdir_vars.mk
I2C/: Interrupt_and_SDAjpg  i2c0.c  i2c0.h
I2C/Debug/: SPI_Lab1_linkInfo.xml  ccsObjs.opt  makefile  subdir_vars.mk
RTC/: hibernation.c  hibernation.h  main.c  wait.c  wd0.h
RTC/Debug/: Lab4_RTC_linkInfo.xml  ccsObjs.opt  makefile  subdir_rules.mk  subdir_vars.mk
RTC/Outputs/: Report.txt
SPI/: main.c  tm4c123gh6pm_startup_ccs.c  wait.c
SPI/Debug/: SPI_Lab1_linkInfo.xml  ccsObjs.opt  makefile  subdir_rules.mk  subdir_vars.mk
board/include/: i2c.h  nvic.h  uart.h
board/src/: nvic.c  spi.c
demo/: CMakeLists.txt  i2c_demo.c
utils/src/: watchdog.c
